--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -332,10 +332,10 @@ h3.my-profession
 {
     color: var(--skin-color);
 }
-.home-info p
+.home-info p .description
 {
     margin-bottom: 70px;
-    font-size: 20px;
+    font-size: 15px;
     color: var(--text-black-700);
 }
 .home .home-img
@@ -413,7 +413,7 @@ h3.my-profession
 .about .about-content .personal-info .info-item
 {
     flex: 0 0 50%;
-    max-width: 42%;
+    max-width: 50%;
 }
 .about .about-content .personal-info .info-item p
 {
@@ -572,6 +572,12 @@ h3.my-profession
     font-size: 16px;
     text-align: justify;
     color: var(--text-black-700);
+}
+.about .about-content .timeline .timeline-item .timeline-organisation {
+    font-weight: 600;
+    font-size: 15px;
+    color: var(--text-black-900);
+    margin-bottom: 10px;
 }
 /* service */
 .service .container
